--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.fontSize": 13
+    "editor.fontSize": 13,
+    "workbench.colorCustomizations": {
+    "[Chocolate Light (rainglow)]": {}
+    }
 }
