--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "confusion",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node": "10.19.0",
+    "npm": "6.14.4"
+  },
   "dependencies": {
     "bootstrap": "4.0.0",
     "bootstrap-social": "5.1.1",
